# TSDVM

./: README.md
Complex/: Makefile  compl.cpp  compl.hpp  compl_output  compl_test.cpp  main.cpp
Complex/complex/: compl.cpp  compl.hpp  main.cpp
Complex/test/: compl_test.cpp  compl_test.hpp
Hash_table/: .clang-tidy  CMakeLists.txt  README.md
Hash_table/hash_table/: hash_table.hpp  hash_table_impl.hpp
Hash_table/list/: list.hpp  list_impl.hpp
Hash_table/queue/: queue.hpp  queue_impl.hpp
Hash_table/test/: CMakeLists.txt  hash_table_test.cpp
Queue/: .clang-format  .gitignore  CMakeLists.txt  README.md
Queue/benchmark/: CMakeLists.txt  queue_impl_bench.cpp  queue_list_bench.cpp  queue_stack_bench.cpp
Queue/list_impl/: CMakeLists.txt  main.cpp  queue.hpp  queue_impl.hpp
Queue/queue/: main.cpp  queue.hpp  queue_impl.hpp
Queue/stack_impl/: CMakeLists.txt
Queue/stack_impl/queque/: CMakeLists.txt  queue.hpp  queue_impl.hpp
Queue/stack_impl/queue/: queue.hpp  queue_impl.hpp
Queue/stack_impl/stack/: stack.hpp  stack_bool.cpp
Queue/test/: CMakeLists.txt  queue_test.cpp
Stack/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  TODO  stack_output
Stack/stack/: CMakeLists.txt  main  main.cpp  stack.cpp  stack.hpp  stack_bool.cpp  stack_bool_impl.hpp  stack_impl.hpp
Stack/test/: CMakeLists.txt  stack_test.cpp
Typo_corrector/: .gitignore  CMakeLists.txt  README.md  input_file.txt  input_text.txt  main.cpp
Typo_corrector/benchmarks/: CMakeLists.txt  test.txt  typo_corrector_bench.cpp  war_and_peace_bench.txt
Typo_corrector/hash_table/: hash_table.cpp  hash_table.hpp  hash_table_impl.hpp
Typo_corrector/list/: list.hpp  list_impl.hpp
Typo_corrector/test/: CMakeLists.txt  class_text_test.txt  test_parser.txt  typo_corrector_test.cpp
Typo_corrector/texts_for_teaching/: Harry_Potter.txt  Night_shift.txt
Typo_corrector/typo_corrector/: CMakeLists.txt  dictionary.cpp  dictionary.hpp  text.cpp  text.hpp  typo_corrector.cpp  typo_corrector.hpp
Typo_corrector/typo_corrector/dictionary/: CMakeLists.txt  dictionary.cpp  dictionary.hpp  thread_manager.cpp  thread_manager.hpp
Typo_corrector/typo_corrector/learn_manager/: TOKENS_DUMP.txt  learn_manager.cpp  learn_manager.hpp  tokens_DUMP.txt
Typo_corrector/typo_corrector/teaching_manager/: CMakeLists.txt  TOKENS_DUMP.txt  teaching_manager.cpp  teaching_manager.hpp
queue/: CMakeLists.txt
queue/queque/: main.cpp  queque.hpp  queque_impl.hpp
